objects/SFDC2Sun_Transfer_or_Sync_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SFDC2Sun_Transfer_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Sync</fullName>
                </value>
                <value>
                    <fullName>Manual Sync</fullName>
                </value>
                <value>
                    <fullName>Resync</fullName>
                </value>
                <value>
                    <fullName>Manual Initiation</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SFDC2Sun_Transfer_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>India_GST__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>India GST</label>
        <referenceTo>India_GST__c</referenceTo>
        <relationshipLabel>SFDC2Sun Transfer History</relationshipLabel>
        <relationshipName>SFDC2Sun_Transfer_or_Sync_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Header</label>
        <referenceTo>Contract_Invoice_Header__c</referenceTo>
        <relationshipLabel>SFDC2Sun Transfer History</relationshipLabel>
        <relationshipName>SFDC2Sun_Transfer_or_Sync_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Transaction_Reference__c</fullName>
        <description>Keeps the Invoice Transaction Reference Number from SUN Infor10</description>
        <label>Invoice Transaction Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator for marking the records as Transaction Type</description>
        <label>Is Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Journal_Number__c</fullName>
        <description>Holds the journal number for the ledgers in Sun Infor10</description>
        <label>Journal Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Transferred</fullName>
                </value>
                <value>
                    <fullName>Transferring</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Out of Sync</fullName>
                </value>
                <value>
                    <fullName>Syncing</fullName>
                </value>
                <value>
                    <fullName>In Sync</fullName>
                </value>
                <value>
                    <fullName>Resyncing</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <description>Keeps the Transaction Amount from the SUN Infor10 Ledger records</description>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Date_String__c</fullName>
        <description>Backend field to convert string coming from PA Stream</description>
        <label>Transaction Date</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Keeps the transaction date from SUN Infor10 Ledger Records</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <description>Keeps the Transaction Type from SUN Infor10 Ledger records</description>
        <label>Transaction Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC2Sun_Transfer_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SFDC2Sun Transfer or Sync History</label>
    <nameField>
        <displayFormat>SFDC-{00000000}</displayFormat>
        <label>SFDC2Sun Transfer History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFDC2Sun Transfer or Sync Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>